--- a/shopclone/src/components/navbarstyle.css
+++ b/shopclone/src/components/navbarstyle.css
@@ -63,7 +63,26 @@
     align-items: center;
 }
 
-.icons {
-    width: 4%;
-    padding: 5px;
+.card {
+    width: 30%;
+    height: 250px;
+    background: grey; 
+    font-size: 18px;
+}
+
+.custom-align .card {
+    display: flex;
+    flex-direction: column;
+}
+  
+.custom-align .card-content {
+    flex: 1;
+    max-height: 100%;
+    align-items: center;
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.reveal {
+    color: black;
 }
