buttons on form

--- a/shopclone/src/components/navbarstyle.css
+++ b/shopclone/src/components/navbarstyle.css
@@ -201,3 +201,14 @@ body{
 .enter {
     border: .1rem black solid;
 }
+
+.join {
+    padding: 7px;
+    margin-left: 40%;
+    color: white;
+    background-color: #723d46;
+    border: .1rem black solid;
+    border-radius: .4rem;
+    cursor: pointer;
+    width: 120px;
+}
