--- a/shopclone/src/components/navbarstyle.css
+++ b/shopclone/src/components/navbarstyle.css
@@ -212,3 +212,104 @@ body{
     cursor: pointer;
     width: 120px;
 }
+
+.join1 {
+    padding: 7px;
+    margin-left: 41%;
+    color: white;
+    background-color: #723d46;
+    border: .1rem black solid;
+    border-radius: .4rem;
+    cursor: pointer;
+    width: 120px;
+}
+
+.signin h6{
+    margin-bottom: 20px;
+    margin-left: 32%;
+}
+
+.cart-items {
+    margin-left: 5%;
+    margin-top: 25px;
+}
+
+.cart-details {
+    margin-left: 4%;
+    max-width: 90%;
+    margin-top: 80px;
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.cart-details li{
+    list-style-type: none;
+    height: 25rem;
+}
+
+.cart-product {
+    display: flex;
+    margin-left: 40px;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    margin-bottom: 1rem;
+}
+
+.cart-product button{
+    margin-top: 10px;
+    margin-bottom: 30px;
+    padding: 4px;
+    color: white;
+    background-color: #723d46;
+    border: .1rem black solid;
+    border-radius: .4rem;
+    cursor: pointer;
+}
+
+.cart-checkout {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    background: white;
+    padding: 15px;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-bottom: 30px;
+    border: .1rem black solid;
+}
+
+.cart-checkout a{
+    margin-top: 10px;
+    margin-bottom: 30px;
+    margin-left: 40%;
+    padding: 7px;
+    color: white;
+    text-decoration: none;
+    background-color: #723d46;
+    border: .1rem black solid;
+    border-radius: .4rem;
+    cursor: pointer;
+    width: 150px;
+}
+
+.cart-checkout .done {
+    margin-left: 35%;
+}
+
+.cart-checkout .done1 {
+    margin-left: 23%;
+}
+
+.cart-checkout .done2 {
+    margin-left: 28%;
+}
+
+.message {
+    margin-right: 15%;
+}
