--- a/shopclone/src/components/navbarstyle.css
+++ b/shopclone/src/components/navbarstyle.css
@@ -81,7 +81,7 @@ body{
     flex: 0 17.5rem;
     padding: 0;
     margin: 1rem;
-    height: 28rem;
+    height: 33rem;
     border-bottom: .1rem #c0c0 solid;
 }
  
@@ -98,7 +98,11 @@ body{
     text-decoration: none;
     color: black;
     font-weight: bold;
+    
 }
+
+
+
  
 .product-name a:hover{
     color: firebrick;
@@ -121,9 +125,7 @@ body{
     height: 300px;
 }
  
-.product-rating {
-    margin-bottom: 5rem;
-}
+
  
 .details {
     margin-top: 100px;
@@ -161,6 +163,19 @@ body{
     margin-top: 5px;
     margin-bottom: 5px;
     width: 120px;
+    color: white;
+    background-color: Firebrick;
+    border: .1rem black solid;
+    border-radius: .4rem;
+    cursor: pointer;
+}
+
+.products .quantity-selector{
+    padding: 7px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5rem;
+    width: 100%;
     color: white;
     background-color: Firebrick;
     border: .1rem black solid;
